<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Libeery</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addedBeerMessageOK">Bière ajoutée !</string>
    <string name="addedBeerMessageKO">Erreur. Bière non ajoutée.</string>
    <string name="addedFavoriteBeerMessageOK">Bière ajoutée à vos bières favorites !</string>
    <string name="labelBeerName">Nom</string>
    <string name="labelBeerType">Type</string>
    <string name="labelBeerAlcoholLevel">Degré</string>
    <string name="labelBeerCategory">Categorie</string>
    <string name="labelBeerDescription">Description</string>
    <string name="labelButtonBeerValidate">Valider</string>
    <string name="errorNoCameraAvailable">Impossible d\'utiliser la caméra de cet appareil.</string>

    <string name="action_settings">Settings</string>
    <string name="action_random_beer">Random beer</string>
    <string name="action_refresh_random_beer">Rafraichir</string>

    <color name="blue_normal">#2ECCFA</color>
    <color name="blue_pressed">#04B4AE</color>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_add_beer">Add beer</string>
    <string name="title_activity_random_beer">Random Beer</string>
    <string name="title_activity_beer_detail">Beer details</string>

    <string name="title_delete_beer">Supprimer ?</string>
    <string name="message_delete_beer">Voulez-vous supprimer</string>
    <string name="button_delete_beer_ok">Oui</string>
    <string name="button_delete_beer_ko">Non</string>
    <string name="button_ok">OK</string>
    <string name="button_show_search_area">Recherche</string>
    
    <string name="non_applicable">NA</string>
    <string name="degree_symbol">°</string>

</resources>
