<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rizomm.ram.libeery.activity.RandomBeerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/randomView_beerPicture"
            android:src="@drawable/empty_bottle"
            android:layout_width="@dimen/add_beer_picture_width"
            android:layout_height="@dimen/add_beer_picture_height"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:text="@string/labelBeerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/randomView_beerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/random_beer_text_size"/>

        <TextView
            android:text="@string/labelBeerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/randomView_beerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/random_beer_text_size"/>

        <TextView
            android:text="@string/labelBeerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/randomView_beerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/random_beer_text_size"/>

        <TextView
            android:text="@string/labelBeerAlcoholLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/randomView_beerAlcoholLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/random_beer_text_size"/>

        <TextView
            android:text="@string/labelBeerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/randomView_beerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/random_beer_text_size"/>

    </LinearLayout>

</ScrollView>
