<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rizomm.ram.libeery.fragment.FirstTabFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/firstTab_searchArea"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7">

                <TextView
                    android:text="@string/labelBeerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

                <Spinner
                    android:id="@+id/firstTab_beerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7">

                <TextView
                    android:text="@string/labelBeerType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

                <Spinner
                    android:id="@+id/firstTab_beerType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <!-- Séparateur -->
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <LinearLayout android:focusable="true"
                    android:focusableInTouchMode="true" android:layout_width="0px"
                    android:layout_height="0px" />
                <EditText
                    android:id="@+id/firstTab_beerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />

                <Button
                    android:id="@+id/firstTab_searchButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_ok"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/firstTab_showAreaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_show_search_area"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <ListView
            android:id="@+id/listAllBeers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

</FrameLayout>
